web/adminer.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: adminer
  namespace: abc
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: adminer
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adminer
    spec:
      containers:
      - image: adminer:latest
        imagePullPolicy: Always
        name: adminer
        ports:
        - containerPort: 8080
        # resources:
        #   limits:
        #     cpu: "1"
        #     memory: "512Mi"
        #   requests:
        #     cpu: "1"
        #     memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: abc
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: adminer
