web/db.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: db
  namespace: abc
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: db
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: db       
    spec:
      containers:
      - image: mysql:8.0
        imagePullPolicy: Always
        name: db
        ports:
        - containerPort: 3306
        # resources:
        #   limits:
        #     cpu: "1"
        #     memory: "512Mi"
        #   requests:
        #     cpu: "1"
        #     memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: abc
spec:
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: db
