web/web.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: web
  namespace: abc
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: web
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web
    spec:
      containers:
      - image: 239164725507.dkr.ecr.ap-southeast-1.amazonaws.com/abc-web:latest
        imagePullPolicy: Always
        name: web
        ports:
        - containerPort: 8000
        # resources:
        #   limits:
        #     cpu: "1"
        #     memory: "512Mi"
        #   requests:
        #     cpu: "1"
        #     memory: "512Mi"        
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: abc
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: web
